--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "private": true,
+  "engines": {
+    "npm": "please-use-pnpm",
+    "pnpm": "^8.15.8",
+    "node": "^20.13.1"
+  },
   "scripts": {
     "dev": "prisma generate && next dev",
     "build": "prisma generate && prisma db push && next build",
