--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "^15.0.7",
