--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
