--- a/package.json
+++ b/package.json
@@ -19,30 +19,33 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@react-email/components": "0.0.19",
+    "@tiptap/html": "^2.4.0",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/blob": "^0.15.0",
+    "@vercel/blob": "^0.15.1",
     "@vercel/kv": "^1.0.0",
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.22",
     "bcrypt": "^5.1.1",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "^0.363.0",
     "nanoid": "^4.0.2",
     "next": "14.0.2",
     "next-auth": "^4.24.7",
     "next-mdx-remote": "^4.4.1",
-    "novel": "^0.1.22",
+    "novel": "^0.4.2",
     "openai-edge": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-email": "^1.0.23",
+    "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
@@ -51,6 +54,7 @@
     "sonner": "^1.2.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
+    "tiptap-markdown": "^0.8.10",
     "unist-util-visit": "^5.0.0",
     "use-debounce": "^10.0.0"
   },
@@ -67,9 +71,10 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "8.53.0",
+    "eslint": "8.56.0",
     "eslint-config-next": "^14.0.2",
     "jsdom": "^24.0.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
