--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "engines": {
     "npm": "please-use-pnpm",
-    "pnpm": "^8.15.8",
-    "node": "^20.13.1"
+    "pnpm": "8.x",
+    "node": "20.x"
   },
   "scripts": {
     "dev": "prisma generate && next dev",
