--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -14,6 +14,6 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm install -g pnpm && pnpm install
+      run: npm install -g pnpm@8 && pnpm install
     - name: Run Vitest tests
       run: pnpm test
