--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@react-email/components": "0.0.19",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@tiptap/html": "^2.4.0",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
