--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
@@ -68,8 +69,8 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "8.53.0",
-    "eslint-config-next": "^14.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.5",
@@ -80,6 +81,7 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.13.0",
     "vitest": "^1.6.0",
     "vitest-mock-extended": "^1.3.1"
   },
