--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@maily-to/core": "^0.0.13",
+    "@maily-to/render": "^0.0.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@react-email/components": "0.0.19",
