--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@maily-to/render": "^0.0.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@react-email/components": "0.0.19",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
@@ -30,6 +31,7 @@
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.22",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "focus-trap-react": "^10.2.3",
