--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-email": "^1.0.23",
+    "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
