--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@maily-to/render": "^0.0.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.19",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
@@ -32,7 +35,7 @@
     "ai": "^2.2.22",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "focus-trap-react": "^10.2.3",
@@ -56,7 +59,7 @@
     "sharp": "^0.32.6",
     "sonner": "^1.2.0",
     "swr": "^2.2.4",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.3.0",
     "unist-util-visit": "^5.0.0",
     "use-debounce": "^10.0.0"
   },
