--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-mdx-remote": "^4.4.1",
     "novel": "^0.1.22",
     "openai-edge": "^1.2.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-email": "^1.0.23",
@@ -72,6 +73,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.9.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
