--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.19",
     "@tremor/react": "^3.11.1",
@@ -43,6 +45,7 @@
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
+    "moment": "^2.30.1",
     "nanoid": "^4.0.2",
     "next": "14.0.2",
     "next-auth": "^4.24.7",
@@ -51,13 +54,15 @@
     "openai-edge": "^1.2.2",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-datetime": "^3.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-multi-email": "^1.0.23",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
-    "resend": "^3.2.0",
+    "resend": "^4.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.2.0",
     "swr": "^2.2.4",
