--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
+    "recharts": "^2.15.2",
     "remark": "^14.0.3",
     "resend": "^4.0.0",
     "sharp": "^0.32.6",
