--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@maily-to/render": "^0.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
