Add confetti on success

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.22",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
