--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "^15.0.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.9.0",
     "@types/papaparse": "^5.3.14",
