--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -82,7 +83,8 @@
     "swr": "^2.2.4",
     "tailwind-merge": "^2.3.0",
     "unist-util-visit": "^5.0.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
