feat: implement Vercel preview deployment support

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "private": true,
   "engines": {
     "npm": "please-use-pnpm",
-    "pnpm": "8.x",
-    "node": "20.x"
+    "pnpm": ">=8",
+    "node": ">=20"
   },
   "scripts": {
     "dev": "prisma generate && next dev",
-    "build": "prisma generate && prisma db push --accept-data-loss && next build",
+    "build": "if [[ \"$VERCEL_GIT_COMMIT_REF\" != \"main\" ]]; then npm run build:preview; else npm run build:production; fi",
+    "build:preview": "prisma generate && prisma db push --force-reset && next build",
+    "build:production": "prisma generate && prisma db push --accept-data-loss && next build",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
