--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@vercel/kv": "^1.0.0",
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.22",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -94,7 +94,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "^15.0.7",
-    "@types/bcrypt": "^5.0.2",
     "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.9.0",
