--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
     "@maily-to/core": "^0.2.7",
     "@maily-to/render": "^0.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -34,10 +38,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -73,6 +79,7 @@
     "react-datetime": "^3.2.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-multi-email": "^1.0.23",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
