--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "novel": "^1.0.2",
     "openai-edge": "^1.2.2",
     "papaparse": "^5.4.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-datetime": "^3.2.0",
     "react-day-picker": "8.10.1",
@@ -89,6 +90,7 @@
     "resend": "^4.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.2.0",
+    "speakeasy": "^2.0.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.3.0",
     "unist-util-visit": "^5.0.0",
@@ -105,8 +107,10 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.9.0",
     "@types/papaparse": "^5.3.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/speakeasy": "^2.0.10",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
