--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,15 +8,14 @@
   },
   "rules": {
     "simple-import-sort/imports": "warn",
-    "no-unused-vars": [
-      "warn",
-      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-    ],
-    "@typescript-eslint/no-use-before-define": "warn",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/consistent-type-imports": [
       "warn",
       { "prefer": "type-imports" }
-    ]
+    ],
+    "react-hooks/exhaustive-deps": "off"
   },
   "ignorePatterns": ["tailwind.config.js"]
 }
