--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "next": "15.5.6",
     "next-auth": "^4.24.11",
     "next-mdx-remote": "^4.4.1",
+    "nextra": "^3.3.1",
+    "nextra-theme-docs": "^3.3.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-datetime": "^3.3.1",
