--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/react": "^15.0.7",
     "@types/canvas-confetti": "^1.9.0",
@@ -97,7 +98,6 @@
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
     "husky": "^9.1.7",
@@ -105,9 +105,9 @@
     "lint-staged": "^15.5.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.15",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2",
