--- a/package.json
+++ b/package.json
@@ -86,7 +86,10 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.4",
+    "@eslint/eslintrc": "^3.2.0",
     "@faker-js/faker": "^8.4.1",
+    "@next/eslint-plugin-next": "^15.5.6",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.15",
