--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "fumadocs-mdx && prisma generate && next dev",
     "build": "if [[ \"$VERCEL_GIT_COMMIT_REF\" != \"main\" ]]; then npm run build:preview; else npm run build:production; fi",
-    "build:preview": "prisma generate && prisma db push && next build",
-    "build:production": "prisma generate && prisma db push && next build",
+    "build:preview": "fumadocs-mdx && prisma generate && prisma db push && next build",
+    "build:production": "fumadocs-mdx && prisma generate && prisma db push && next build",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
@@ -64,6 +64,9 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "focus-trap-react": "^10.3.1",
     "framer-motion": "^10.18.0",
+    "fumadocs-core": "^16.0.1",
+    "fumadocs-mdx": "^13.0.0",
+    "fumadocs-ui": "^16.0.1",
     "lucide-react": "^0.445.0",
     "moment": "^2.30.1",
     "nanoid": "^4.0.2",
